--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://dishachhabra11/github.io/tax-dashboard",
   "name": "dark_dash",
   "version": "1.0.0",
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
@@ -6,7 +7,11 @@
   "scripts": {
     "start": "react-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "predeploy":"npm run build",
+    "eject":"react-scripts eject",
+    "deploy":"gh-pages -d build"
+    
   },
   "author": "",
   "license": "ISC",
